// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldsForProvider it returns the expected fields for each provider 1`] = `
Object {
  "description": "Azure AD or on premise ADFS from Microsoft",
  "iconUrl": "https://assets.ossoapp.io/icons/azure.svg",
  "idpGeneratedFields": Object {
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-azure-sso-url",
          "label": "Identity Provider Single Sign-On URL",
          "readOnly": false,
          "type": "text",
        },
        "name": "ssoUrl",
      },
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-azure-sso-cert",
          "label": "X.509 Certificate",
          "readOnly": false,
          "type": "textarea",
        },
        "name": "ssoCert",
      },
    ],
    "metadataXml": Object {
      "accept": ".xml",
      "copyable": false,
      "id": "osso-azure-metadata-xml",
      "label": "Metadata XML",
      "readOnly": false,
      "type": "textarea",
    },
  },
  "label": "Azure",
  "ossoGeneratedFields": Object {
    "appDetails": Array [
      Object {
        "name": "contactEmail",
        "pdfProps": Object {
          "x": 45,
          "y": 388,
        },
      },
      Object {
        "name": "name",
        "pdfProps": Object {
          "x": 395,
          "y": 962,
        },
      },
    ],
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-azure-acs-url",
          "label": "Reply URL (Assertion Consumer Service URL)",
          "readOnly": true,
          "type": "text",
        },
        "name": "acsUrl",
        "pdfProps": Object {
          "size": 8,
          "x": 55,
          "y": 2880,
        },
      },
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-azure-entity-id",
          "label": "Identifier (Entity ID)",
          "readOnly": true,
          "type": "text",
        },
        "name": "ssoIssuer",
        "pdfProps": Object {
          "x": 55,
          "y": 2828,
        },
      },
    ],
  },
  "primary": true,
  "serviceProviderMetadata": false,
  "value": "AZURE",
}
`;

exports[`fieldsForProvider it returns the expected fields for each provider 2`] = `
Object {
  "description": "Customer IDP not listed - use generic SAML",
  "iconUrl": "https://assets.ossoapp.io/icons/saml.svg",
  "idpGeneratedFields": Object {
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-generic-saml-sso-url",
          "label": "Identity Provider Single Sign-On URL",
          "readOnly": false,
          "type": "text",
        },
        "name": "ssoUrl",
      },
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-generic-saml-sso-cert",
          "label": "X.509 Certificate",
          "readOnly": false,
          "type": "textarea",
        },
        "name": "ssoCert",
      },
    ],
    "metadataXml": Object {
      "accept": ".xml",
      "copyable": false,
      "id": "osso-generic-saml-metadata-xml",
      "label": "Metadata XML",
      "readOnly": false,
      "type": "textarea",
    },
  },
  "label": "Generic SAML 2.0",
  "ossoGeneratedFields": Object {
    "appDetails": Array [
      Object {
        "name": "contactEmail",
        "pdfProps": Object {
          "x": 36,
          "y": 396,
        },
      },
      Object {
        "name": "name",
        "pdfProps": Object {
          "x": 324,
          "y": 737,
        },
      },
      Object {
        "name": "logoUrl",
        "pdfProps": Object {
          "x": 80,
          "y": 805,
        },
      },
    ],
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-generic-saml-entity-id",
          "label": "Entity ID",
          "readOnly": true,
          "type": "text",
        },
        "name": "ssoIssuer",
        "pdfProps": Object {
          "x": 56,
          "y": 1049,
        },
      },
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-generic-saml-acs-url",
          "label": "Single sign on URL",
          "readOnly": true,
          "type": "text",
        },
        "name": "acsUrl",
        "pdfProps": Object {
          "size": 8,
          "x": 56,
          "y": 1102,
        },
      },
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-generic-saml-acs-url-validator",
          "label": "ACS URL Validator",
          "readOnly": true,
          "type": "text",
        },
        "name": "acsUrlValidator",
        "pdfProps": Object {
          "size": 8,
          "x": 56,
          "y": 1155,
        },
      },
    ],
  },
  "primary": false,
  "serviceProviderMetadata": false,
  "value": "OTHER",
}
`;

exports[`fieldsForProvider it returns the expected fields for each provider 3`] = `
Object {
  "description": "Google Workspace SAML app",
  "iconUrl": "https://assets.ossoapp.io/icons/google.svg",
  "idpGeneratedFields": Object {
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-google-sso-url",
          "label": "Identity Provider Single Sign-On URL",
          "readOnly": false,
          "type": "text",
        },
        "name": "ssoUrl",
      },
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-google-sso-cert",
          "label": "X.509 Certificate",
          "readOnly": false,
          "type": "textarea",
        },
        "name": "ssoCert",
      },
    ],
    "metadataXml": Object {
      "accept": ".xml",
      "copyable": false,
      "id": "osso-google-metadata-xml",
      "label": "Metadata XML",
      "readOnly": false,
      "type": "textarea",
    },
  },
  "label": "Google (SAML)",
  "ossoGeneratedFields": Object {
    "appDetails": Array [
      Object {
        "name": "contactEmail",
        "pdfProps": Object {
          "x": 40,
          "y": 323,
        },
      },
      Object {
        "name": "name",
        "pdfProps": Object {
          "x": 354,
          "y": 783,
        },
      },
      Object {
        "name": "logoUrl",
        "pdfProps": Object {
          "x": 81,
          "y": 891,
        },
      },
    ],
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-google-acs-url",
          "label": "Single sign on URL",
          "readOnly": true,
          "type": "text",
        },
        "name": "acsUrl",
        "pdfProps": Object {
          "size": 8,
          "x": 56,
          "y": 996,
        },
      },
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-google-entity-id",
          "label": "Audience URI (SP Entity ID)",
          "readOnly": true,
          "type": "text",
        },
        "name": "ssoIssuer",
        "pdfProps": Object {
          "x": 56,
          "y": 1049,
        },
      },
    ],
  },
  "primary": true,
  "serviceProviderMetadata": false,
  "value": "GOOGLE",
}
`;

exports[`fieldsForProvider it returns the expected fields for each provider 4`] = `
Object {
  "description": "Okta cloud-based Identity Provider",
  "iconUrl": "https://assets.ossoapp.io/icons/okta.svg",
  "idpGeneratedFields": Object {
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-okta-sso-url",
          "label": "Identity Provider Single Sign-On URL",
          "readOnly": false,
          "type": "text",
        },
        "name": "ssoUrl",
      },
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-okta-sso-cert",
          "label": "X.509 Certificate",
          "readOnly": false,
          "type": "textarea",
        },
        "name": "ssoCert",
      },
    ],
    "metadataXml": Object {
      "accept": ".xml",
      "copyable": false,
      "id": "osso-okta-metadata-xml",
      "label": "Metadata XML",
      "readOnly": false,
      "type": "textarea",
    },
  },
  "label": "Okta",
  "ossoGeneratedFields": Object {
    "appDetails": Array [
      Object {
        "name": "contactEmail",
        "pdfProps": Object {
          "x": 45,
          "y": 388,
        },
      },
      Object {
        "name": "name",
        "pdfProps": Object {
          "x": 215,
          "y": 1615,
        },
      },
      Object {
        "name": "logoUrl",
        "pdfProps": Object {
          "x": 81,
          "y": 1684,
        },
      },
    ],
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-okta-acs-url",
          "label": "Single sign on URL",
          "readOnly": true,
          "type": "text",
        },
        "name": "acsUrl",
        "pdfProps": Object {
          "size": 8,
          "x": 55,
          "y": 2009,
        },
      },
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-okta-entity-id",
          "label": "Audience URI (SP Entity ID)",
          "readOnly": true,
          "type": "text",
        },
        "name": "ssoIssuer",
        "pdfProps": Object {
          "x": 55,
          "y": 2167,
        },
      },
    ],
  },
  "primary": true,
  "serviceProviderMetadata": false,
  "value": "OKTA",
}
`;

exports[`fieldsForProvider it returns the expected fields for each provider 5`] = `
Object {
  "description": "OneLogin cloud based Identity Provider",
  "iconUrl": "https://assets.ossoapp.io/icons/one-login.svg",
  "idpGeneratedFields": Object {
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-one-login-sso-url",
          "label": "Identity Provider Single Sign-On URL",
          "readOnly": false,
          "type": "text",
        },
        "name": "ssoUrl",
      },
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-one-login-sso-cert",
          "label": "X.509 Certificate",
          "readOnly": false,
          "type": "textarea",
        },
        "name": "ssoCert",
      },
    ],
    "metadataXml": Object {
      "accept": ".xml",
      "copyable": false,
      "id": "osso-one-login-metadata-xml",
      "label": "Metadata XML",
      "readOnly": false,
      "type": "file",
    },
  },
  "label": "OneLogin",
  "ossoGeneratedFields": Object {
    "appDetails": Array [
      Object {
        "name": "contactEmail",
        "pdfProps": Object {
          "x": 42,
          "y": 389,
        },
      },
      Object {
        "name": "name",
        "pdfProps": Object {
          "x": 326,
          "y": 1044,
        },
      },
      Object {
        "name": "logoUrl",
        "pdfProps": Object {
          "x": 81,
          "y": 1164,
        },
      },
    ],
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-one-login-acs-url",
          "label": "Single sign on URL",
          "readOnly": true,
          "type": "text",
        },
        "name": "acsUrl",
        "pdfProps": Object {
          "size": 8,
          "x": 56,
          "y": 1713,
        },
      },
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-one-login-entity-id",
          "label": "Audience URI (SP Entity ID)",
          "readOnly": true,
          "type": "text",
        },
        "name": "ssoIssuer",
        "pdfProps": Object {
          "x": 56,
          "y": 1554,
        },
      },
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-one-login-acs-url-validator",
          "label": "ACS URL Validator",
          "readOnly": true,
          "type": "text",
        },
        "name": "acsUrlValidator",
        "pdfProps": Object {
          "size": 8,
          "x": 56,
          "y": 1660,
        },
      },
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-one-login-recipient",
          "label": "Recipient",
          "readOnly": true,
          "type": "text",
        },
        "name": "acsUrl",
        "pdfProps": Object {
          "size": 8,
          "x": 56,
          "y": 1607,
        },
      },
    ],
  },
  "primary": true,
  "serviceProviderMetadata": false,
  "value": "ONELOGIN",
}
`;

exports[`fieldsForProvider it returns the expected fields for each provider 6`] = `
Object {
  "description": "PingID cloud identity provider",
  "iconUrl": "https://assets.ossoapp.io/icons/ping.svg",
  "idpGeneratedFields": Object {
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-ping-sso-url",
          "label": "Identity Provider Single Sign-On URL",
          "readOnly": false,
          "type": "text",
        },
        "name": "ssoUrl",
      },
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-ping-sso-cert",
          "label": "X.509 Certificate",
          "readOnly": false,
          "type": "textarea",
        },
        "name": "ssoCert",
      },
    ],
    "metadataXml": Object {
      "accept": ".xml",
      "copyable": false,
      "id": "osso-ping-metadata-xml",
      "label": "Metadata XML",
      "readOnly": false,
      "type": "textarea",
    },
  },
  "label": "Ping",
  "ossoGeneratedFields": Object {
    "appDetails": Array [
      Object {
        "name": "contactEmail",
        "pdfProps": Object {
          "x": 36,
          "y": 322,
        },
      },
      Object {
        "name": "name",
        "pdfProps": Object {
          "x": 311,
          "y": 1126,
        },
      },
      Object {
        "name": "logoUrl",
        "pdfProps": Object {
          "x": 80,
          "y": 1246,
        },
      },
    ],
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-ping-acs-url",
          "label": "ACS URL",
          "readOnly": true,
          "type": "text",
        },
        "name": "acsUrl",
        "pdfProps": Object {
          "size": 8,
          "x": 52,
          "y": 1490,
        },
      },
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-ping-entity-id",
          "label": "ENTITY ID",
          "readOnly": true,
          "type": "text",
        },
        "name": "ssoIssuer",
        "pdfProps": Object {
          "x": 52,
          "y": 1543,
        },
      },
    ],
  },
  "primary": true,
  "serviceProviderMetadata": false,
  "value": "PING",
}
`;

exports[`fieldsForProvider it returns the expected fields for each provider 7`] = `
Object {
  "description": "Salesforce.com instance as an Identity Provider",
  "iconUrl": "https://assets.ossoapp.io/icons/salesforce.svg",
  "idpGeneratedFields": Object {
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-salesforce-sso-url",
          "label": "Identity Provider Single Sign-On URL",
          "readOnly": false,
          "type": "text",
        },
        "name": "ssoUrl",
      },
      Object {
        "inputProps": Object {
          "copyable": false,
          "id": "osso-salesforce-sso-cert",
          "label": "X.509 Certificate",
          "readOnly": false,
          "type": "textarea",
        },
        "name": "ssoCert",
      },
    ],
    "metadataXml": Object {
      "accept": ".xml",
      "copyable": false,
      "id": "osso-salesforce-metadata-xml",
      "label": "Metadata XML",
      "readOnly": false,
      "type": "textarea",
    },
  },
  "label": "Salesforce",
  "ossoGeneratedFields": Object {
    "appDetails": Array [
      Object {
        "name": "contactEmail",
        "pdfProps": Object {
          "x": 36,
          "y": 388,
        },
      },
      Object {
        "name": "name",
        "pdfProps": Object {
          "x": 52,
          "y": 2074,
        },
      },
      Object {
        "name": "logoUrl",
        "pdfProps": Object {
          "x": 52,
          "y": 2233,
        },
      },
    ],
    "manual": Array [
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-salesforce-acs-url",
          "label": "ACS URL",
          "readOnly": true,
          "type": "text",
        },
        "name": "acsUrl",
        "pdfProps": Object {
          "size": 8,
          "x": 52,
          "y": 2464,
        },
      },
      Object {
        "inputProps": Object {
          "copyable": true,
          "id": "osso-salesforce-entity-id",
          "label": "Entity Id",
          "readOnly": true,
          "type": "text",
        },
        "name": "ssoIssuer",
        "pdfProps": Object {
          "x": 52,
          "y": 2411,
        },
      },
    ],
  },
  "primary": true,
  "serviceProviderMetadata": false,
  "value": "SALESFORCE",
}
`;

exports[`providers contains an array of Identity Providers in the tuple 1`] = `
Array [
  Object {
    "description": "Azure AD or on premise ADFS from Microsoft",
    "iconUrl": "https://assets.ossoapp.io/icons/azure.svg",
    "label": "Azure",
    "primary": true,
    "value": "AZURE",
  },
  Object {
    "description": "Customer IDP not listed - use generic SAML",
    "iconUrl": "https://assets.ossoapp.io/icons/saml.svg",
    "label": "Generic SAML 2.0",
    "primary": false,
    "value": "OTHER",
  },
  Object {
    "description": "Google Workspace SAML app",
    "iconUrl": "https://assets.ossoapp.io/icons/google.svg",
    "label": "Google (SAML)",
    "primary": true,
    "value": "GOOGLE",
  },
  Object {
    "description": "Okta cloud-based Identity Provider",
    "iconUrl": "https://assets.ossoapp.io/icons/okta.svg",
    "label": "Okta",
    "primary": true,
    "value": "OKTA",
  },
  Object {
    "description": "OneLogin cloud based Identity Provider",
    "iconUrl": "https://assets.ossoapp.io/icons/one-login.svg",
    "label": "OneLogin",
    "primary": true,
    "value": "ONELOGIN",
  },
  Object {
    "description": "PingID cloud identity provider",
    "iconUrl": "https://assets.ossoapp.io/icons/ping.svg",
    "label": "Ping",
    "primary": true,
    "value": "PING",
  },
  Object {
    "description": "Salesforce.com instance as an Identity Provider",
    "iconUrl": "https://assets.ossoapp.io/icons/salesforce.svg",
    "label": "Salesforce",
    "primary": true,
    "value": "SALESFORCE",
  },
]
`;
